<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/textViewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/app_name"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="15dp"
            android:adjustViewBounds="true"
            android:maxWidth="225dp"
            android:maxHeight="225dp"
            android:src="@drawable/main_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewHeader" />

        <TextView
            android:id="@+id/textViewTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/text_border"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/text_0"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewLogo" />

        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/text_border"
            android:gravity="center"
            android:hint="@string/enter_text"
            android:inputType="textMultiLine"
            android:maxLines="1"
            android:padding="14dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTop" />

        <Button
            android:id="@+id/chat"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/restart"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/editTextInput"
            app:layout_constraintTop_toBottomOf="@id/editTextInput" />

        <Button
            android:id="@+id/text_button"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/change_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/editTextInput"
            app:layout_constraintTop_toBottomOf="@id/editTextInput" />

        <TextView
            android:id="@+id/textV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="40dp"
            android:text=""
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chat"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
